<!--
  ~ Copyright 2022 The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      https://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>
    <string name="app_name">Ads22SpeedChallenge</string>
    <string name="prev_location">Previous location</string>
    <string name="next_location">Next location</string>
    <string name="title_card_date"> | Monday, Oct 24</string>
    <string name="dropdown_less">Less</string>
    <string name="dropdown_more">More</string>
    <string name="icon_desc_sunny">Sunny</string>
    <string name="icon_desc_cloudy">Cloudy</string>
    <string name="icon_desc_thunderstorm">Thunderstorm</string>
    <string name="icon_desc_overcast">Overcast</string>
    <string name="weekly_forecast_cd">Weekly forecast</string>
</resources>
